# matd

./: .gitignore  Cargo.toml
src/: approx_matching.rs  indexing.rs  main.rs  preprocessing.rs  string_matching.rs
