[package]
name = "brute_force_automaton"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
simdutf8 = "0.1.4"
stop-words = "0.7.0"
fxhash = "0.2.1"

[dependencies.stem]
git = "https://github.com/minhnhdo/rust-stem"
